# avf

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev-setup.ps1  pyproject.toml  setup.py
docs/: user_story_proposal.md
examples/: 01_basic_usage.py  02_multi_storage.py  03_database_tracking.py  04_storage_references.py  05_history_analysis.py
scripts/: build.ps1
src/asset_version/: __init__.py  metadata.py  version.py
src/asset_version/database/: __init__.py  connection.py
src/asset_version/repository/: __init__.py  models.py
src/asset_version/storage/: __init__.py
src/avf/: __init__.py  metadata.py  version.py
src/avf/database/: __init__.py  connection.py
src/avf/repository/: __init__.py  base.py  models.py  sqlite.py
src/avf/storage/: __init__.py  base.py  disk.py  git.py  perforce.py  reference.py
src/avf/utils/: __init__.py  history.py
tests/: conftest.py  test_version.py
tests/unit/: test_disk_storage.py  test_history.py  test_metadata.py  test_repository.py  test_version.py
